--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1>Welcome to Java Home Cloud hello123</h1>
+  <h1>Welcome to Java Home Cloud12</h1>
 </div>
 
 </body>
